<resources>
    <string name="app_name">ApexRacing</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="next_race">Next Race</string>
    <string name="upcoming">UPCOMING</string>
    <string name="race_weekend_in">Race Weekend in</string>
    <string name="days">Days</string>
    <string name="sign_up_with_e_mail">Sign Up with E-mail</string>
    <string name="apex_racing">APEX RACING</string>
    <string name="slogan">Fantasy. Speed. Stat.</string>
    <string name="the_ultimate_f1_fantasy_companion">The ultimate F1 fantasy\n companion.</string>
    <string name="join_slogan">Join the grid today</string>
    <string name="signup_text">Already have a pit crew?</string>
    <string name="login">Login</string>
    <string name="back">Back</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="create_account">Create Account</string>
    <string name="next">Next</string>
    <string name="step_1_of_2">Step 1 of 2</string>
    <string name="username">Username</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="favorite_driver">Favorite Driver</string>
    <string name="favorite_team">Favorite Team</string>
    <string name="pick_1_driver_1_team_to_finish">Pick 1 driver + 1 team to finish.</string>
    <string name="change_favorite">Change Favorite</string>
    <string name="logout">Logout</string>
    <string name="drivers">Drivers</string>
    <string name="constructors">Constructors</string>
    <string name="save_team">Save Team</string>
    <string name="remaining_budget">REMAINING BUDGET</string>
    <string name="total_cap">TOTAL CAP</string>
    <string name="_100_0m">$100.0M</string>
    <string name="team_management">Team Management</string>
    <string name="target_95">Target: 95%</string>
    <string name="my_grid">My Grid</string>
    <string name="avaliable_options">Available Options</string>
    <string name="m">M</string>
    <string name="select_season">Select Season</string>
    <string name="_2026">2026</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="pos">POS</string>
    <string name="driver">DRIVER</string>
    <string name="pts">PTS</string>
    <string name="constructor">CONSTRUCTOR</string>
    <string name="driver_name">DRIVER NAME</string>
    <string name="team_name">TEAM NAME</string>
    <string name="num">NUM</string>
    <string name="hrs">HRS</string>
    <string name="mins">MINS</string>
    <string name="secs">SECS</string>
    <string name="fantasy_league">Fantasy League</string>
    <string name="total_points">TOTAL POINTS</string>
    <string name="global_rank">GLOBAL RANK</string>
    <string name="your_driver">Your Driver</string>
    <string name="season_rank">Season Rank</string>
    <string name="last_race">Last Race</string>
    <string name="upload_profile_picture">Upload Profile Picture</string>
    <string name="profile">Profile</string>
    <string name="what_do_you_want_to_share">What do you want to share?</string>
    <string name="welcome_back">Welcome back,</string>
    <string name="save_favorites">Save Favorites</string>
    <string name="hours">Hours</string>
    <string name="minutes">Minutes</string>


</resources>