<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="58dp"
    android:orientation="horizontal"
    android:gravity="center_vertical"
    android:background="#21090A">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/itemPosition"
        android:layout_width="45dp"
        android:layout_height="match_parent"
        android:gravity="center"
        android:text="@string/num"
        android:textColor="@color/grey_inline"
        android:textStyle="bold"
        android:textSize="16sp" />

    <View
        android:id="@+id/itemColorLine"
        android:layout_width="5dp"
        android:layout_height="31dp"
        android:layout_marginEnd="12dp"
        android:background="@color/red_inline" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center_vertical"
        android:orientation="vertical">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/itemName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/driver_name"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            android:textSize="14sp" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/itemTeam"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/team_name"
            android:textColor="@color/grey_inline"
            android:textSize="12sp" />
    </LinearLayout>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/itemPoints"
        android:layout_width="70dp"
        android:layout_height="match_parent"
        android:gravity="center_vertical|end"
        android:text="@string/num"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        android:textSize="14sp" />

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="28dp"
        android:layout_height="match_parent"
        android:gravity="center_vertical"
        android:text="@string/pts"
        android:textColor="#B99696"
        android:textStyle="bold"
        android:textSize="12sp"
        android:layout_marginStart="@dimen/default_small_margin"
        />

</LinearLayout>