<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/welcome"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.WelcomeActivity"
    android:background="@color/background_card_color"
    >

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/welcome_IMG_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/default_small_margin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:src="@drawable/logo"
        />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/welcome_LBL_slogan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="serif"
        android:text="@string/slogan"
        android:textColor="@color/grey_inline"
        android:textSize="@dimen/slogan_size"
        android:textStyle="bold"
        android:layout_marginTop="@dimen/default_big_margin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/welcome_IMG_logo" />


    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/welcome_LBL_sentence"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/the_ultimate_f1_fantasy_companion"
        android:textAlignment="center"
        android:textSize="@dimen/default_text_size"
        android:textStyle="bold"
        android:textColor="@color/grey_inline"
        android:layout_marginTop="@dimen/lbl_margin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/welcome_LBL_slogan" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/welcome_LBL_secSentence"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/join_slogan"
        android:textColor="@color/grey_inline"
        android:layout_marginTop="@dimen/default_big_margin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/welcome_LBL_sentence"
        />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/welcome_BTN_signup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/default_big_margin"
        android:backgroundTint="@color/brand_red"
        android:text="@string/sign_up_with_e_mail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/welcome_LBL_secSentence" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/welcome_LBL_loginSentence"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/default_big_margin"
        android:layout_marginTop="@dimen/lbl_margin"
        android:text="@string/signup_text"
        android:textColor="@color/grey_inline"
        app:layout_constraintBottom_toTopOf="@+id/welcome_BTN_login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/welcome_BTN_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:backgroundTint="@color/brand_red"
        android:layout_marginBottom="@dimen/default_big_margin"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />



</androidx.constraintlayout.widget.ConstraintLayout>